# serializer version: 1
# name: TestDescribeMethodTrajectory.test_describe_single_trajectory
  '''
  patient_id,n_sequences,event_length,event_entropy,event_vocabulary_size,event_temporal_span,event_median_gap,event_gap_std,state_length,state_entropy,state_vocabulary_size,state_temporal_span,state_n_transitions,state_mean_duration,state_median_duration,state_duration_std,interval_length,interval_entropy,interval_vocabulary_size,interval_temporal_span,interval_mean_duration,interval_median_duration,interval_duration_std
  1,3,11,3.095795255000934,9,339 days,30 days,28 days 01:45:17.465614296,2,1.0,2,364 days,1,182 days,182 days,236 days 04:10:04.648768912,5,2.321928094887362,5,255 days,13 days 14:24:00,11 days,6 days 15:44:23.238261671
  
  '''
# ---
# name: TestDescribeMethodTrajectory.test_describe_with_aggregate
  '''
  ,n_sequences,event_length,event_entropy,event_vocabulary_size,event_temporal_span,event_median_gap,event_gap_std,state_length,state_entropy,state_vocabulary_size,state_temporal_span,state_n_transitions,state_mean_duration,state_median_duration,state_duration_std,interval_length,interval_entropy,interval_vocabulary_size,interval_temporal_span,interval_mean_duration,interval_median_duration,interval_duration_std
  count,1.0,1.0,1.0,1.0,1,1,1,1.0,1.0,1.0,1,1.0,1,1,1,1.0,1.0,1.0,1,1,1,1
  mean,3.0,11.0,3.095795255000934,9.0,339 days 00:00:00,30 days 00:00:00,28 days 01:45:17.465614296,2.0,1.0,2.0,364 days 00:00:00,1.0,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912,5.0,2.321928094887362,5.0,255 days 00:00:00,13 days 14:24:00,11 days 00:00:00,6 days 15:44:23.238261671
  std,,,,,,,,,,,,,,,,,,,,,,
  min,3.0,11.0,3.095795255000934,9.0,339 days 00:00:00,30 days 00:00:00,28 days 01:45:17.465614296,2.0,1.0,2.0,364 days 00:00:00,1.0,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912,5.0,2.321928094887362,5.0,255 days 00:00:00,13 days 14:24:00,11 days 00:00:00,6 days 15:44:23.238261671
  25%,3.0,11.0,3.095795255000934,9.0,339 days 00:00:00,30 days 00:00:00,28 days 01:45:17.465614296,2.0,1.0,2.0,364 days 00:00:00,1.0,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912,5.0,2.321928094887362,5.0,255 days 00:00:00,13 days 14:24:00,11 days 00:00:00,6 days 15:44:23.238261671
  50%,3.0,11.0,3.095795255000934,9.0,339 days 00:00:00,30 days 00:00:00,28 days 01:45:17.465614296,2.0,1.0,2.0,364 days 00:00:00,1.0,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912,5.0,2.321928094887362,5.0,255 days 00:00:00,13 days 14:24:00,11 days 00:00:00,6 days 15:44:23.238261671
  75%,3.0,11.0,3.095795255000934,9.0,339 days 00:00:00,30 days 00:00:00,28 days 01:45:17.465614296,2.0,1.0,2.0,364 days 00:00:00,1.0,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912,5.0,2.321928094887362,5.0,255 days 00:00:00,13 days 14:24:00,11 days 00:00:00,6 days 15:44:23.238261671
  max,3.0,11.0,3.095795255000934,9.0,339 days 00:00:00,30 days 00:00:00,28 days 01:45:17.465614296,2.0,1.0,2.0,364 days 00:00:00,1.0,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912,5.0,2.321928094887362,5.0,255 days 00:00:00,13 days 14:24:00,11 days 00:00:00,6 days 15:44:23.238261671
  
  '''
# ---
# name: TestDescribeMethodTrajectory.test_describe_with_custom_separator
  '''
  patient_id,n_sequences,event.length,event.entropy,event.vocabulary_size,event.temporal_span,event.median_gap,event.gap_std,state.length,state.entropy,state.vocabulary_size,state.temporal_span,state.n_transitions,state.mean_duration,state.median_duration,state.duration_std,interval.length,interval.entropy,interval.vocabulary_size,interval.temporal_span,interval.mean_duration,interval.median_duration,interval.duration_std
  1,3,11,3.095795255000934,9,339 days,30 days,28 days 01:45:17.465614296,2,1.0,2,364 days,1,182 days,182 days,236 days 04:10:04.648768912,5,2.321928094887362,5,255 days,13 days 14:24:00,11 days,6 days 15:44:23.238261671
  
  '''
# ---
# name: TestSummarizerTrajectory.test_add_to_static
  '''
  patient_id,gender,age,insurance,chronic_condition,n_sequences,event_length,event_entropy,event_vocabulary_size,event_temporal_span,event_median_gap,event_gap_std,state_length,state_entropy,state_vocabulary_size,state_temporal_span,state_n_transitions,state_mean_duration,state_median_duration,state_duration_std,interval_length,interval_entropy,interval_vocabulary_size,interval_temporal_span,interval_mean_duration,interval_median_duration,interval_duration_std
  1,F,81,PUBLIC,True,3,11,3.0957952,9,339 days,30 days,28 days 01:45:17.465614296,2,1.0,2,364 days,1,182 days,182 days,236 days 04:10:04.648768912,5,2.321928,5,255 days,13 days 14:24:00,11 days,6 days 15:44:23.238261671
  
  '''
# ---
# name: TestSummarizerTrajectory.test_statistics_snapshot
  "{'trajectory_id': 1, 'sequence_count': 3, 'sequence_names': ['event', 'state', 'interval'], 'event_length': 11, 'event_entropy': 3.095795255000934, 'event_vocabulary_size': 9, 'event_temporal_span': Timedelta('339 days 00:00:00'), 'event_median_gap': Timedelta('30 days 00:00:00'), 'event_gap_std': Timedelta('28 days 01:45:17.465614296'), 'event_vocab_size': 9, 'state_length': 2, 'state_entropy': 1.0, 'state_vocabulary_size': 2, 'state_temporal_span': Timedelta('364 days 00:00:00'), 'state_n_transitions': 1, 'state_mean_duration': Timedelta('182 days 00:00:00'), 'state_median_duration': Timedelta('182 days 00:00:00'), 'state_duration_std': Timedelta('236 days 04:10:04.648768912'), 'state_vocab_size': 2, 'interval_length': 5, 'interval_entropy': 2.321928094887362, 'interval_vocabulary_size': 5, 'interval_temporal_span': Timedelta('255 days 00:00:00'), 'interval_mean_duration': Timedelta('13 days 14:24:00'), 'interval_median_duration': Timedelta('11 days 00:00:00'), 'interval_duration_std': Timedelta('6 days 15:44:23.238261671'), 'interval_vocab_size': 5}"
# ---
